# Oriente_Objet

./: CMakeLists.txt  Equation.cpp  Equation.h  GaussSeidel.h  IMesh.h  Jacobi.h  NonUniformMesh.h  Problem.cpp  Problem.h  README.md  UniformMesh.h  Variable.h  main.cpp  plot-GaussSeidel.gp  plot-Jacobi.gp  test.cpp
